openshift/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: backend
  name: backend
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend
    deploymentconfig: backend
  sessionAffinity: None
  type: ClusterIP
