openshift/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: 2020-03-03T22:59:56Z
  labels:
    app: acme-helloworld
  name: acme-helloworld
  namespace: newsletter-d3js
  resourceVersion: "43064594"
  selfLink: /api/v1/namespaces/newsletter-d3js/services/acme-helloworld
  uid: b3aa8542-5da2-11ea-a3da-00505683ba56
spec:
  clusterIP: 172.30.38.59
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: acme-helloworld
    deploymentconfig: acme-helloworld
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
