openshift/frontendService.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: frontend-data-platform-patterns
  name: frontend-data-platform-patterns
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: frontend-data-platform-patterns
    deploymentconfig: frontend-data-platform-patterns
  sessionAffinity: None
  type: ClusterIP
